# RD-HW-DOCKER

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  check-quality.sh  output.txt  run.sh  run_tests.sh
.cache/clangd/index/: ballistics.cpp.1AAE0D54D9637689.idx  ballistics.hpp.51C11D9D93C13FB4.idx  json.hpp.B404D1A0BECDAE63.idx  logger.cpp.5B2DF03FC80F6F50.idx  logger.hpp.93F97D753469D5B1.idx  main.cpp.121CEE42DB528D7C.idx  main.cpp.36C62B5D3CCCED54.idx  main.cpp.59CC1E424765AE43.idx  main.cpp.98C6F040EFAD075B.idx  telemetry.cpp.A92E6445B7CAE878.idx  telemetry.hpp.5B2462E9F3436FEB.idx
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_05/data/: bad_extra_field.txt  bad_trailing_chars.txt
homework_05/src/: main.cpp  telemetry.cpp
homework_06/: CMakeLists.txt
homework_06/data/: sample_vog17.txt  unknown_ammo.txt
homework_06/include/: ballistics.hpp
homework_06/src/: ballistics.cpp  main.cpp
homework_06/tests/: ballistics_tests.cpp
homework_07/: CMakeLists.txt  README.md
homework_07/data/: config.json
homework_07/include/: Common.hpp  ballistics.hpp  main.h
homework_07/include/base/: Ballistics.hpp  Logger.hpp  MissionProcessor.hpp
homework_07/include/dto/: AmmoParams.hpp  Coord.hpp  DroneConfig.hpp  DroneState.hpp  Nlohmann.hpp  OutputData.hpp  SimState.hpp  SimStep.hpp  Target.hpp  TargetsData.hpp
homework_07/include/factories/: LoaderFactory.hpp  ProviderFactory.hpp  SolverFactory.hpp
homework_07/include/interfaces/: IBallisticSolver.hpp  IConfigLoader.hpp  ITargetProvider.hpp
homework_07/include/loaders/: FileConfigLoader.hpp
homework_07/include/providers/: JsonTargetProvider.hpp
homework_07/include/solvers/: AnalyticalSolver.hpp
homework_07/src/: ballistics.cpp  logger.cpp  main.cpp
homework_07/src/base/: Ballistics.cpp  Logger.cpp  MissionProcessor.cpp
homework_07/src/factories/: LoaderFactory.cpp  ProviderFactory.cpp  SolverFactory.cpp
homework_07/src/loaders/: FileConfigLoader.cpp
homework_07/src/providers/: JsonTargetProvider.cpp
homework_07/src/solvers/: AnalyticalSolver.cpp
