cmake_minimum_required(VERSION 3.20)

# Окремий CMake-проєкт для домашньої роботи 04. Його можна збирати як
# через root CMakeLists.txt, так і напряму з цієї директорії.
project(hw_05 CXX)

# Код домашньої роботи збирається з тим самим стандартом, що й лекційні приклади.
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Один executable для задачі з UGV odometry.
add_executable(hw_05 src/main.cpp src/telemetry.cpp)

# Базові compiler warnings допомагають побачити підозрілі місця до runtime.
target_compile_options(hw_05 PRIVATE -Wall -Wextra -pedantic)
